# usb-wasm

./: .gitignore  .gitmodules  Cargo.toml  Justfile  LICENSE  README.md  build_errors.txt  build_errors_full.txt  call_logs.csv  perf.data  perf.data.old  sample.json
command-components/: wasi_snapshot_preview1.command.wasm
command-components/control/: Cargo.toml
command-components/control/src/: main.rs
command-components/enumerate-devices-go/: .gitignore  build.sh  main.go
command-components/enumerate-devices-go/api/: bindings.c  bindings.go  bindings.h
command-components/enumerate-devices-rust/: Cargo.toml
command-components/enumerate-devices-rust/src/: main.rs
command-components/lsusb/: Cargo.toml
command-components/lsusb/src/: main.rs
command-components/mass-storage/: Cargo.toml
command-components/mass-storage/.cargo/: config.toml
command-components/mass-storage/src/: bulk_only.rs  lib.rs  lru.rs  main.rs  mass_storage.rs
command-components/mass-storage/src/bulk_only/: mod.rs  native.rs  wasm.rs
command-components/pause/: Cargo.toml
command-components/pause/src/: main.rs
command-components/ping/: Cargo.toml
command-components/ping/src/: main.rs
command-components/ps5-maze/: Cargo.toml  README.md  build.rs  update.md
command-components/ps5-maze/src/: lib.rs  main.rs
command-components/streams-test/: Cargo.toml
command-components/streams-test/src/: main.rs
command-components/webcam/: Cargo.toml  README.md  build.rs  test_webcam.sh
command-components/webcam-cv/: Cargo.toml  README.md  build.rs
command-components/webcam-cv/src/: lib.rs  main.rs  webcam.rs
command-components/webcam/src/: lib.rs  webcam.rs
command-components/xbox/: Cargo.toml
command-components/xbox-maze/: Cargo.toml  README.md
command-components/xbox-maze/src/: lib.rs  main.rs
command-components/xbox/src/: main.rs
command-components/yolo-detector/: Cargo.toml  README.md
command-components/yolo-detector-terminal/: Cargo.toml
command-components/yolo-detector-terminal/src/: lib.rs
command-components/yolo-detector/src/: lib.rs  main.rs
rusb-wasi/: .gitmodules  BUILDING_WASI.md  COMPILING.md  Cargo.toml  RUSB-WASI.md  build_native.sh
rusb-wasi/examples/wasi-workload/: Cargo.toml  build.rs  build.sh  build_native.sh  rusb_workload.component.wasm  rusb_workload.embedded.wasm
rusb-wasi/examples/wasi-workload/examples/: lsusb.rs  usb_io.rs
rusb-wasi/examples/wasi-workload/src/: lib.rs
rusb-wasi/examples/wasi-workload/wasi-sysroot/usr/include/libusb-1.0/: libusb.h
rusb-wasi/examples/wasi-workload/wasi-sysroot/usr/lib/pkgconfig/: libusb-1.0.pc
rusb-wasi/libusb1-sys/: build.rs
src/: lib.rs
usb-wasm/: Cargo.toml  README.md  build_errors.txt  check_output.txt  expanded.rs  usb.wit
usb-wasm-bindings/: Cargo.toml  README.md  regenerate-bindings.sh
usb-wasm-bindings/src/: bindings.rs  cguest.rs  lib.rs  traits.rs  webcam_export_only.rs  webcam_provider_world.rs  yolo_command_world.rs
usb-wasm/src/: error.rs  host.rs  host_impl.rs  lib.rs  usb_backend.rs  usb_backend_old.rs
usb-wasm/wit/: configuration.wit  descriptors.wit  device.wit  errors.wit  hotplug.wit  raw-frame-stream.wit  transfers.wit  world.wit
wasmtime-usb/: Cargo.toml  README.md
wasmtime-usb/src/: lib.rs
wit/: configuration.wit  cv.wit  descriptors.wit  device.wit  errors.wit  hotplug.wit  transfers.wit  world.wit
wit/backup/: bindings.wit
wit/backup/usb/: descriptors.wit  imports.wit  types.wit
