[workspace]
members = [
    "command-components/control",
    "command-components/lsusb",
    "command-components/ping",
    "command-components/xbox",
    "command-components/mass-storage",
    "command-components/enumerate-devices-rust",
    "wasmtime-usb",
    "usb-wasm",
    "usb-wasm-bindings",
]
default-members = ["wasmtime-usb"]
resolver = "2"

[workspace.dependencies]
usb-wasm = { path = "usb-wasm" }
usb-wasm-bindings = { path = "usb-wasm-bindings" }

anyhow = "1.0.75"
wasmtime = "19.0.0"
wasmtime-wasi = "19.0.0"

[profile.release]
# strip = true
debug = true

[profile.dev.package."*"]
debug = false
opt-level = 3

