[workspace]
members = [
    "wasmtime-usb",
    "usb-wasm-bindings",
    "usb-wasm",
]
exclude = ["rusb-wasi"]
default-members = ["wasmtime-usb"]
resolver = "2"

[workspace.dependencies]
usb-wasm = { path = "usb-wasm" }
usb-wasm-bindings = { path = "usb-wasm-bindings" }

anyhow = "1.0.75"
wasmtime = "31.0.0"
wasmtime-wasi = "31.0.0"

[profile.release]
strip = true

[profile.dev.package."*"]
debug = false
opt-level = 3

[patch.crates-io]
rusb = { path = "rusb-wasi" }
