[package]
name = "usb-wasm-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = "0.42.1"

[features]
default = ["usb-guest"]
usb-guest = []
std = ["usb-guest"]
traits = ["usb-guest"]
webcam-provider = []
yolo-command = []