[package]
name = "usb-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
libusb1-sys = "0.7.0"
thiserror = "1.0.58"
tracing = "0.1.40"
log = "0.4"
env_logger = "0.11"
wasmtime = { workspace = true, features = ["async", "component-model"] }
wasmtime-wasi = { workspace = true }
tokio = { version = "1.36", features = ["full"] }
oneshot = "0.1"
anyhow = "1.0.75"
tract-onnx = "0.21.1"
image = "0.24.7"
ndarray = "0.15.6"
clap = { version = "4.4.18", features = ["derive"] }
libc = "0.2"
once_cell = "1.21.4"
imageproc = "0.26.1"

[dev-dependencies]
anyhow = "1.0.44"
