[package]
name = "wasmtime-usb-cli"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# usb-wasm = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

