[package]
name = "mass-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "mass-storage"

[dependencies]
anyhow = { workspace = true }
block_device = "0.1.3"
bufstream = "0.1.4"
bytes = "1.5.0"
chrono = "0.4.37"
fat32 = "0.2.0"
fatfs = { git = "https://github.com/rafalh/rust-fatfs.git" }
fscommon = "0.1.1"
mbrman = "0.5.2"
rand = "0.8.5"
scsi = "0.2.1"
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
usb-wasm-bindings = { workspace = true, features = ["traits"] }
