[package]
name = "mass-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "mass-storage"

[dependencies]
ahash = "0.8.11"
anyhow = { workspace = true }
bufstream = "0.1.4"
bufstream-fresh = "0.3.1"
bytes = "1.5.0"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
fatfs = "0.3.6"
fscommon = "0.1.1"
mbrman = "0.5.2"
rand = "0.8.5"
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
usb-wasm-bindings = { workspace = true, features = ["traits"] }
