[package]
name = "ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
usb-wasm-bindings = { workspace = true, features = ["traits"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusb = "0.9.4"