[package]
name = "webcam"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
log = "0.4"

[target.'cfg(target_family = "wasm")'.dependencies]
usb-wasm-bindings = { workspace = true, features = ["webcam-provider"] }
wit-bindgen = "0.42.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rusb = { path = "../../rusb-wasi" }
libusb1-sys = { path = "../../rusb-wasi/libusb1-sys" }
libc = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.component]
# NOTE: This project uses plain `cargo build`, not `cargo-component`.
# The world field below is documentation only; WIT embedding is done
# manually via `wasm-tools component embed` in the Justfile.
package = "component:webcam"

[package.metadata.component.target]
path = "../../wit"
world = "webcam-provider"

[package.metadata.component.dependencies]
"wasi:cli" = "0.2.5"
"wasi:clocks" = "0.2.5"
"wasi:random" = "0.2.5"
"wasi:sockets" = "0.2.5"
"wasi:io" = "0.2.5"
"wasi:filesystem" = "0.2.5"