[package]
name = "yolo-detector-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
usb-wasm-bindings = { workspace = true }
wit-bindgen = "0.42.1"
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
image = "0.24.7"
futures = "0.3.30"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:yolo-detector-terminal"
