[package]
name = "yolo-detector"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_family = "wasm")'.dependencies]
usb-wasm-bindings = { workspace = true }
wit-bindgen = "0.42.1"
tract-onnx = "0.21.1"
image = "0.24.7"
ndarray = "0.15.6"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:yolo-detector"
