[package]
name = "yolo-detector"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_family = "wasm")'.dependencies]
usb-wasm-bindings = { workspace = true }
wit-bindgen = "0.42.1"
anyhow = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:yolo-detector"
