[package]
name = "rusb-wasi-workload"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "rusb_wasi_workload"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "rusb_workload"
path = "src/lib.rs"

[[example]]
name = "lsusb"
path = "examples/lsusb.rs"

[[example]]
name = "usb_io"
path = "examples/usb_io.rs"

[dependencies]
rusb = { path = "../.." }
fatfs = "0.3"
mbrman = "0.5"
fscommon = "0.1"
thiserror = "1.0"
log = "0.4"
